<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Map Image</string>
    <string name="content_image">Image</string>
    <string name="hello_world">Hello World, MapImage</string>
    <string name="image_info">Info</string>
    <string name="image_directory_item">Image Directory</string>
    <string name="image_file_list_name">Image Files</string>
    <string name="menu_settings">Settings</string>
    <string name="open_item">New Image</string>
    <string name="open_image_location_item">Image at Location</string>
    <string name="open_image_location_title">Qualifying Files</string>
    <string name="reset_item">Reset</string>
    <string name="set_image_directory_item">Set Image Directory</string>
    <string name="start_location_item">Start Location</string>
    <string name="stop_location_item">Stop Location</string>
    <string name="start_tracking_item">Start Tracking</string>
    <string name="stop_tracking_item">Stop Tracking</string>
    <string name="save_gpx_item">Save GPX</string>
    <string name="clear_track_item">ClearTrack</string>
    <string name="test_item">Test</string>
    <string name="update_slow">Slow</string>
    <string name="update_fast">Fast</string>
    <string name="update_fastest">Fastest</string>
    <string name="update_title">Set Update Interval</string>
    <string name="gpx_save_title">Add Filename Information\nPrefix, Category, Location, Suffix</string>

    <!-- Service -->
    <string name="service_notification_title">MapImage</string>
    <string name="service_notification_text">"MapImage Location Service is running"</string>
    <string name="default_notification_channel_id">MapImage_Location_Service_Default</string>
    <string name="default_notification_description">MapImage Location Service</string>

    <!-- Info/Help -->
    <string name="help_url_not_found">Cannot find Help URL</string>
    <string name="help_item">Help</string>
    <string name="help_title">Help</string>
    <string name="help_show_error">Error showing help</string>

    <!-- Utils -->
    <string name="error">Error</string>
    <string name="exception">Exception</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
</resources>