<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/open"
          android:title="@string/open_item"
          android:icon="@drawable/ic_swap_horizontal_circle_black_36dp"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/open_image_location"
          android:title="@string/open_image_location_item" />
    <item android:id="@+id/start_location"
          android:title="@string/start_location_item" />
    <item android:id="@+id/start_tracking"
          android:title="@string/start_tracking_item" />
    <item android:id="@+id/save_gpx"
          android:title="@string/save_gpx_item" />
    <item android:id="@+id/startclear_track"
          android:title="@string/clear_track_item" />
    <item android:id="@+id/set_update_interval"
          android:title="@string/update_title" />
    <item android:id="@+id/image_info"
          android:title="@string/image_info" />
    <item android:id="@+id/reset"
          android:title="@string/reset_item" />
    <item android:id="@+id/help"
          android:title="@string/help_item" />
</menu>